# EasyTranslator

./: .gitignore  API.md  API_CONTRACT.md  README.md  README_rus.md  ROADMAP.md  package-lock.json  package.json
src/: App.jsx  App.scss  App.txt  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  db.txt  downloader.rs  installer.rs  lib.rs  lib.txt  main.rs
src/components/: AddGameView.jsx  AddLocalizationView.jsx  SettingsView.jsx
src/components/Game/: GameDetailView.jsx  Gamecard.jsx  Status.jsx
src/components/Layout/: MainContent.jsx  sidebar.jsx
src/components/Modals/: AddGameModal.jsx
src/components/textEditorComponent/: textEditor.jsx
src/components/titleBar/: titleBar.jsx  titleBar.scss
src/data/: games.js
