[package]
name = "smart-translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smart_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14" # Rust File Dialog - для вызова нативных окон OS
window-vibrancy = "0.7.1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "0.6"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3" # Нужна для чтения потока скачивания кусками
tempfile = "3" # Для безопасного создания временных файлов
sha2 = "0.11.0"

[profile.release]
panic = "abort"      # Отключает детализированные стеки ошибок (экономит место)
codegen-units = 1    # Улучшает оптимизацию (но сборка идет дольше)
lto = true           # Link Time Optimization (сильно сжимает код)
opt-level = "s"      # Оптимизация специально под размер файла (size)
strip = true         # Удаляет отладочные символы из экзешника
